Fixed bug on tabbed regions due to in IE9/10 the click event was caputed as drag event. Increased drag function timeout to allow click event to be fired. Fixed bug on IE9/10 for CSS3 gradient syntax.

--- a/modules/dashboard-ui/dashboard-ui-resources/src/main/webapp/WEB-INF/etc/skins/Default_Skin/styles/default.css
+++ b/modules/dashboard-ui/dashboard-ui-resources/src/main/webapp/WEB-INF/etc/skins/Default_Skin/styles/default.css
@@ -127,10 +127,14 @@ A:hover {
 	box-shadow: 0 1px 2px rgba(0,0,0,.2);
 	color: #FFFFFF;
 	border: solid 1px #e7362e;
-	background: #ffffff;
-	background: -webkit-gradient(linear, left top, left bottom, from(#e7362e), to(#88201B));
-	background: -moz-linear-gradient(top,  #e7362e,  #88201B);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#e7362e', endColorstr='#88201B');
+    background: #88201B; /* Non CSS3 browsers. */
+    background: linear-gradient(top, #e7362e 0%,#88201B 100%); /* W3C */
+    background: -webkit-gradient(linear, left top, left bottom, from(#e7362e), to(#88201B)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #e7362e 0%,#88201B 100%); /* Chrome10+,Safari5.1+ */
+    background: -moz-linear-gradient(top,  #e7362e,  #88201B); /* FF */
+    background: -o-linear-gradient(top, #e7362e 0%,#88201B 100%); /* Opera11.10+ */
+    filter: progid:DXImageTransform.Microsoft.Gradient(endColorstr='#88201B', startColorstr='#e7362e', gradientType='0'); /* IE6-9 */
+    background: -ms-linear-gradient(top, #e7362e 0%,#88201B 100%); /* IE10+ */
 	font-size: 100%;
 }
 
@@ -150,10 +154,14 @@ A:hover {
 	box-shadow: 0 1px 2px rgba(0,0,0,.2);
 	color: #FFFFFF;
 	border: solid 1px #ff4b42;
-	background: #ffffff;
-	background: -webkit-gradient(linear, left top, left bottom, from(#ff4b42), to(#e7362e));
-	background: -moz-linear-gradient(top,  #ff4b42,  #e7362e);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4b42', endColorstr='#e7362e');
+    background: #e7362e; /* Non CSS3 browsers. */
+    background: linear-gradient(top, #ff4b42 0%,#e7362e 100%); /* W3C */
+    background: -webkit-gradient(linear, left top, left bottom, from(#ff4b42), to(#e7362e)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #ff4b42 0%,#e7362e 100%); /* Chrome10+,Safari5.1+ */
+    background: -moz-linear-gradient(top,  #ff4b42,  #e7362e); /* FF */
+    background: -o-linear-gradient(top, #ff4b42 0%,#e7362e 100%); /* Opera11.10+ */
+    filter: progid:DXImageTransform.Microsoft.Gradient(endColorstr='#e7362e', startColorstr='#ff4b42', gradientType='0'); /* IE6-9 */
+    background: -ms-linear-gradient(top, #ff4b42 0%,#e7362e 100%); /* IE10+ */
 	font-size: 100%;
 }
 
@@ -192,9 +200,14 @@ A:hover {
 
 /* Style for table headers.*/
 .skn-table_header, tr.skn-table_header td, tr.skn-table_header th {
-	background: -webkit-gradient(linear, left top, left bottom, from(#505052), to(#1c1919));
-	background: -moz-linear-gradient(top,  #505052,  #1c1919);
-	filter: progid:DXImageTransform.Microsoft.Gradient(endColorstr='#1c1919', startColorstr='#505052', gradientType='0');
+    background: #1c1919; /* Non CSS3 browsers. */
+    background: linear-gradient(top, #505052 0%,#1c1919 100%); /* W3C */
+    background: -webkit-gradient(linear, left top, left bottom, from(#505052), to(#1c1919)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #505052 0%,#1c1919 100%); /* Chrome10+,Safari5.1+ */
+    background: -moz-linear-gradient(top,  #505052,  #1c1919); /* FF */
+    background: -o-linear-gradient(top, #505052 0%,#1c1919 100%); /* Opera11.10+ */
+    filter: progid:DXImageTransform.Microsoft.Gradient(endColorstr='#1c1919', startColorstr='#505052', gradientType='0'); /* IE6-9 */
+    background: -ms-linear-gradient(top, #505052 0%,#1c1919 100%); /* IE10+ */
     height: 22px;
     color: #FFFFFF;
     font-weight: bold;
